--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-			package="com.bench"
-			android:versionCode="1"
-			android:versionName="1.0.0">
-		<!--require Android 4.4 and higher-->
-		<uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9" />
-		<!--require OpenGL ES 2.0-->
-		<uses-feature android:glEsVersion="0x00020000"/>
-		<application android:label="@string/app_name"
-								 android:icon="@drawable/icon"
-								 android:installLocation="preferExternal"
-								 android:largeHeap="true"
-								 android:allowBackup="true"
-								 android:hasCode="false">
-			<activity android:name="android.app.NativeActivity"
-					  android:label="@string/app_name"
-					  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-					  android:configChanges="orientation|keyboardHidden">
-				<!-- Tell NativeActivity the name of or .so -->
-				<meta-data android:name="android.app.lib_name"
-						android:value="native" />
-				<intent-filter>
-					<action android:name="android.intent.action.MAIN" />
-					<category android:name="android.intent.category.LAUNCHER" />
-				</intent-filter>
-			</activity>
-		</application>
+          package="com.bench"
+          android:versionCode="1"
+          android:versionName="1.0.0">
+    <!--require Android 2.3.1 and higher-->
+    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!--require OpenGL ES 2.0-->
+    <uses-feature android:glEsVersion="0x00020000"/>
+    <application android:label="@string/app_name"
+                 android:icon="@drawable/icon"
+                 android:installLocation="preferExternal"
+                 android:allowBackup="true"
+                 android:hasCode="false">
+        <activity android:name="android.app.NativeActivity"
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+                  android:configChanges="orientation|keyboardHidden">
+            <!-- Tell NativeActivity the name of or .so -->
+            <meta-data android:name="android.app.lib_name" android:value="native" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 </manifest> 
