--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -2,15 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.bench"
           android:versionCode="1"
-          android:versionName="1.0.0">
+          android:versionName="1.0.0"
+          android:installLocation="preferExternal">
     <!--require Android 2.3.1 and higher-->
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
     <!--require OpenGL ES 2.0-->
     <uses-feature android:glEsVersion="0x00020000"/>
     <application android:label="@string/app_name"
                  android:icon="@drawable/icon"
-                 android:installLocation="preferExternal"
                  android:allowBackup="true"
                  android:hasCode="false">
         <activity android:name="android.app.NativeActivity"
